Add user custom attributes to thread context (#5491)
Signed-off-by: Mark Boyd <mark.boyd@gsa.gov>